--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     </section>
     <section>
       <div class="filter-options">
-        <h2>Filter Results</h2>
         <select id="neighborhoods-select" aria-label="Neighborhood" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
@@ -32,7 +31,10 @@
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <div class="results-container">
+        <h2>Filter Results</h2>
+        <ul id="restaurants-list"></ul>
+      </div>
     </section>
   </main>
 
