--- a/restaurant.html
+++ b/restaurant.html
@@ -17,13 +17,13 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
+    <h1><a href="/">Restaurant Reviews</a></h1>
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <ul id="breadcrumb" aria-label="breadcrumb">
+        <li><a href="/">Home</a></li>
+      </ul>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -38,7 +38,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
