--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#444">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="manifest" href="/manifest.json">
@@ -42,7 +43,7 @@
   </main>
 
   <script type="application/javascript" charset="utf-8" src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= htmlWebpackPlugin.options.API_KEY %>&libraries=places&callback=initMap"></script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= htmlWebpackPlugin.options.API_KEY %>&libraries=places&callback=initMap"></script> -->
 
 
   <footer id="footer">
