feat: add features for phase 3 - add favorite button function - add review form - add functionality to deferr submission if uses is online

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -54,6 +54,33 @@
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
+    <section id="add-review">
+      <form class="form form--centered">
+        <h2 class="form__title">Submit New Review</h2>
+        <div class="form__group">
+          <label for="name" class="form__label">Name</label>
+          <div class="form__control">
+            <input type="text" name="name" id="name" required/>
+          </div>
+        </div>
+        <div class="form__group">
+          <label for="rating" class="form__label">Rating</label>
+          <div class="form__control">
+            <input type="number" name="rating" id="rating" min="1" max="5" step="1" required/>
+          </div>
+        </div>
+        <div class="form__group">
+          <label for="comments" class="form__label">Comments</label>
+          <div class="form__control">
+            <textarea name="comments" id="comments" rows="5" required></textarea>
+          </div>
+        </div>
+        <div class="form__group--flex-column">
+          <input type="submit" value="Submit" class="form__button">
+          <input type="reset" value="Reset Form" class="form__button form__button--hover-red">
+        </div>
+      </form>
+    </section>
   </main>
   <!-- End main -->
 
